inyokaedit (0.0.8~ppa1) oneiric; urgency=low

  * Possibility to hide statusbar

  * Added interwiki links

 -- Thorsten Roth <elthoro@gmx.de>  Sun, 20 Nov 2011 20:16:12 +0200

inyokaedit (0.0.7~ppa1) oneiric; urgency=low

  * Open recent files menu entry

  * Updated man file

  * Made clumsy code completion working again

 -- Thorsten Roth <elthoro@gmx.de>  Sat, 12 Nov 2011 22:37:49 +0200

inyokaedit (0.0.6~ppa1) natty; urgency=low

  * Importing interwiki links via xml file in menu and parser

  * Cleand up source code...

  * Added font size to settings

  * Separated settings in own module

 -- Thorsten Roth <elthoro@gmx.de>  Sat, 05 Nov 2011 20:13:19 +0200

inyokaedit (0.0.5~ppa1) natty; urgency=low

  * Changed save folder of settings file

  * File dialogs open last used folder

  * Replaced CDownloadArticle with simple wget call

  * Bigger application icon

  * Reporting bugs via apport

  * Added missing interwiki links

  * Save and restore toolbar positions

 -- Thorsten Roth <elthoro@gmx.de>  Sun, 23 Oct 2011 20:37:44 +0200

inyokaedit (0.0.4~ppa1) natty; urgency=low

  * Added option to download images of articles (Closes: #847258)

  * Minor changes (exception handling, using wget for metadata download)

 -- Thorsten Roth <elthoro@gmx.de>  Wed, 19 Oct 2011 19:47:23 +0200

inyokaedit (0.0.3~ppa2) natty; urgency=low

  * Bug fix: Preview was stored in wrong folder /home/user/Documents, fixed to /home/user/.InyokaEdit

 -- Thorsten Roth <elthoro@gmx.de>  Mon, 19 Aug 2011 21:13:36 +0200

inyokaedit (0.0.3~ppa1) natty; urgency=low

  * Another try to realize Open with...

  * File dialog opens home directory

  * Show download progress at first startup

 -- Thorsten Roth <elthoro@gmx.de>  Sun, 18 Aug 2011 22:25:04 +0200

inyokaedit (0.0.2~ppa1) natty; urgency=low

  * CHANGELOG: Used changelog file ;-)

  * main.cpp, CInyokaEdit.cpp: Open file from command line argument

  * CInyokaEdit.cpp: Updated about dialog
